...
  ...group,
  id: '~nibset-napwyn/tlon',
  title: 'Tlon',
};

const destinationChannelChats: Array<db.Chat & { type: 'channel' }> = [
  { channel: tlonLocalWaterCooler, title: 'General' },
  { channel: tlonLocalIntros, title: 'News' },
  { channel: tlonLocalBulletinBoard, title: 'Announcements' },
].map(({ channel, title }, index) => ({
  id: `chat/${channel.id}`,
  type: 'channel',
  channel: {
...
          status={
            status
              ? { value: status, busy: false, onChange: setEnabled }
              : undefined
          }
          save={{
            label: task ? 'Save' : 'Create',
            disabled: status === 'held',
            busy: false,
            onPress: noop,
          }}
          onDelete={task ? noop : undefined}
        />
...
