...
        backAction={handleGoBack}
        useHorizontalTitleLayout={!isWindowNarrow}
        title={getTitle()}
        rightActions={[
          {
            id: 'DetailsEditButton',
            text: 'Rename',
            onPress: handlePressEdit,
            disabled: !actionsEnabled,
            tint: '$primaryText',
            testID: 'DetailsEditButton',
            visible: currentUserIsAdmin,
          },
...
